--- a/playbooks/wireguard.yml
+++ b/playbooks/wireguard.yml
@@ -31,7 +31,7 @@
         dest: "/etc/systemd/system/wireguard_reresolve-dns.{{ item }}"
         owner: root
         group: root
-        mode: 0644
+        mode: "0644"
       loop:
         - service
         - timer
