--- a/inventory/host_vars/desktop/ssh.yml
+++ b/inventory/host_vars/desktop/ssh.yml
@@ -5,5 +5,5 @@ ssh_keys:
   andrei: "{{ lookup('url', 'https://raw.githubusercontent.com/cosandr/dotfiles/master/private_dot_ssh/private_desktop_ed25519.pub') | trim }}"
 
 sshd_extra_config: |
-  Match Address {{ groups['gui'] | difference([inventory_hostname]) | map('extract', hostvars, 'ansible_host') | join(',') }}
+  Match Address {{ firewall_trusted_sources | difference([ansible_host]) | join(',') }}
       PermitRootLogin prohibit-password
