--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,7 @@ roles_path = roles
 inventory = inventory
 filter_plugins = filter_plugins
 vault_password_file = gopass-vault.sh
+gathering = smart
 library = ./library
 module_utils = ./module_utils
 host_key_checking = False
