--- a/roles/xorg/defaults/main.yml
+++ b/roles/xorg/defaults/main.yml
@@ -1,22 +1,8 @@
 ---
 
-xorg_packages:
-  - xorg-fonts-encodings
-  - xorg-server
-  - xorg-server-common
-  - xorg-setxkbmap
-  - xorg-xauth
-  - xorg-xev
-  - xorg-xinit
-  - xorg-xinput
-  - xorg-xkbcomp
-  - xorg-xmodmap
-  - xorg-xprop
-  - xorg-xrandr
-  - xorg-xrdb
-  - xorg-xset
-  - xorgproto
+xorg_packages: []
 
+xorg_provisioning_synced: true
 xorg_conf_d: []
 # xorg_conf_d:
 #   - name: "10-monitor"
