Sleep after lock

--- a/inventory/host_vars/laptop/power.yml
+++ b/inventory/host_vars/laptop/power.yml
@@ -7,6 +7,7 @@ user_suspend: |
   Type=forking
   ExecStartPre=-/usr/bin/playerctl pause
   ExecStart=/home/andrei/.local/bin/my-screenlock
+  ExecStartPost=/usr/bin/sleep 1
   {% else %}
   Type=oneshot
   ExecStart=-/usr/bin/playerctl pause
