Configure X keyboard switch
setxkbmap wasn't persistent, constantly forgetting it when unplugging keyboards.

--- a/inventory/group_vars/gui/xorg.yml
+++ b/inventory/group_vars/gui/xorg.yml
@@ -11,3 +11,11 @@ __xorg_conf_d_group:
         Option "AccelProfile" "flat"
         Option "AccelSpeed" "0"
       EndSection
+  - name: "50-keyboard"
+    content: |
+      Section "InputClass"
+        Identifier "My Keyboard"
+        MatchIsKeyboard "yes"
+        Option "XkbLayout" "us,no"
+        Option "XkbOptions" "grp:rctrl_rshift_toggle"
+      EndSection
