--- a/inventory/host_vars/desktop/network.yml
+++ b/inventory/host_vars/desktop/network.yml
@@ -24,3 +24,8 @@ networkd_config:
 
     [DHCP]
     RouteMetric=2048
+
+resolved_config:
+  DNS: "{{ all_net.general.cidr | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address') }}"
+  FallbackDNS: "1.1.1.1 8.8.8.8"
+  Domains: "{{ domains['hb'] }} vm.{{ domains['hb'] }}"
