--- a/roles/systemd_networkd/tasks/main.yml
+++ b/roles/systemd_networkd/tasks/main.yml
@@ -108,33 +108,10 @@
   notify: Restart systemd-networkd
   when: networkd_provisioning_synced
 
-- name: Symlink resolv.conf
-  when: resolved_link_stub
-  block:
-    - name: Check if /etc/resolv.conf is mounted by WireGuard
-      ansible.builtin.command: "grep -qF {{ chroot_path }}/etc/resolv.conf /proc/mounts"
-      check_mode: false
-      changed_when: false
-      failed_when: false
-      when: wireguard_interface | default(false)
-      register: __resolv_mount
 
-    - name: Stop WireGuard interface
-      ansible.builtin.command: "wg-quick down {{ wireguard_interface }}"
-      changed_when: "'ip link delete' in __wg_down.stderr"
-      register: __wg_down
-      notify: Start WireGuard interface
-      when:
-        - __resolv_mount.rc is defined
-        - __resolv_mount.rc == 0
-
-    - name: Link resolved stub file to /etc/resolv.conf
-      ansible.builtin.file:
-        src: /run/systemd/resolve/stub-resolv.conf
-        dest: "{{ chroot_path }}/etc/resolv.conf"
-        state: link
-        force: true
-        follow: false
+- name: Include resolved configuration
+  ansible.builtin.include_tasks:
+    file: resolved.yml
 
 - name: Check if NetworkManager is active  # noqa command-instead-of-module
   ansible.builtin.command: systemctl is-active -q NetworkManager.service
