Add networkd_install variable

--- a/roles/systemd_networkd/defaults/main.yml
+++ b/roles/systemd_networkd/defaults/main.yml
@@ -2,6 +2,7 @@
 
 chroot_path: ""
 
+networkd_install: "{{ not chroot_path }}"
 resolved_link_stub: true
 networkd_provisioning_synced: true
 networkd_restart: "{{ networkd_immediate }}"
