--- a/inventory/group_vars/loki/firewall.yml
+++ b/inventory/group_vars/loki/firewall.yml
@@ -3,6 +3,9 @@
 node_exporter_config_firewall: false
 
 firewalld_zones:
+  - name: public
+    interfaces: "{{ host_nic_names }}"
+
   - name: internal
     sources: "{{ home_net | dict2items | json_query('[].value.cidr') }}"
 
