--- a/inventory/host_vars/laptop/firewall.yml
+++ b/inventory/host_vars/laptop/firewall.yml
@@ -7,10 +7,7 @@ firewall_rules:
 
 firewalld_zones:
   - name: public
-    interfaces:
-      - wlan0
-      - enp0s31f6
-      - enp84s0u1
+    interfaces: "{{ host_nic_names }}"
 
   - name: home
     sources: "{{ home_net | dict2items | json_query('[].value.cidr') }}"
