--- a/inventory/host_vars/webgw01/prometheus.yml
+++ b/inventory/host_vars/webgw01/prometheus.yml
@@ -1,14 +1,13 @@
 ---
 
 prometheus_storage_retention: "7d"
-prometheus_config_flags_extra: {}
-prometheus_web_listen_address: "{{ wireguard_ip }}:{{ prometheus_port }}"
 
 __prom_blackbox_icmp_targets: "{{ __prom_node_ips }}"
-__prom_auto_target_group: "prom"
-__extra_prometheus_scrape_configs: []
+__prom_auto_target_group: "prom_common"
 
-prometheus_node_static_config: []
+prometheus_blackbox_icmp_targets:
+  - "{{ ansible_host }}"
+  - "{{ wireguard_ip }}"
 
 prometheus_alert_rules_files:
   - "{{ repo_base_dir }}/files/prometheus/alerts/blackbox.rules"
