--- a/inventory/group_vars/webgw/nginx/vhosts.yml
+++ b/inventory/group_vars/webgw/nginx/vhosts.yml
@@ -1,6 +1,13 @@
 ---
 
-__nginx_vhosts_common:
+nginx_vhosts: >-
+  {%- set tmp = [] -%}
+  {%- for i in range(1, 4) -%}
+  {{- tmp.extend(lookup('ansible.builtin.vars', '__nginx_vhosts_' + (i | string), default=[])) -}}
+  {%- endfor -%}
+  {{ tmp }}
+
+__nginx_vhosts_3:
   - filename: default_reject.conf
     server_name: default_reject
     template: "{{ repo_base_dir }}/files/webgw/nginx/default_reject.conf.j2"
@@ -33,11 +40,9 @@ __nginx_vhosts_common:
     server_name: plex
     template: "{{ repo_base_dir }}/files/webgw/nginx/plex.conf.j2"
 
-__nginx_vhosts_host:
+__nginx_vhosts_2:
   - filename: nextcloud_ta.conf
     server_name: nextcloud_ta
     upstream_name: nextcloud_ta
     domain: "{{ domains['ti'] }}"
     template: "{{ repo_base_dir }}/files/webgw/nginx/nextcloud.conf.j2"
-
-nginx_vhosts: "{{ (__nginx_vhosts_common | default([])) + (__nginx_vhosts_host | default([])) }}"
