--- a/inventory/group_vars/k8s_cluster/calico.yml
+++ b/inventory/group_vars/k8s_cluster/calico.yml
@@ -7,7 +7,7 @@ global_as_num: "64512"
 local_as: "{{ 65001 + (groups['k8s_cluster'] | ansible.utils.index_of('eq', inventory_hostname)) }}"
 peers:
   - name: "rb5009"
-    as: "5009"
+    as: "{{ mt_bgp_peers[0].as }}"
     router_id: "{{ (hostvars['rb5009'].mt_routing_ids | selectattr('name', 'eq', 'vm') | first).id }}"
     scope: global
 
